--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="https://thumbs.dreamstime.com/b/indian-cow-calf-beautiful-view-brown-171691955.jpg" alt=""></td>
+        <td><img src="https://t4.ftcdn.net/jpg/03/13/26/93/360_F_313269335_lstj465YW0IfLzpPOUfkpwTACl87vTaW.jpg" alt=""></td>
         <td><h1>Chunni</h1>
           <td><p><em> u can find info. about <strong> Chunni </strong></em> </p>
           <p><em> my favourite song is <strong><a href="https://www.youtube.com/watch?v=f-x83gtvqgA"> cold hours </a></strong></em></p></td>
